- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    4.8.6, 5.3.0
- 
    None
- 
    OS X 10.9.2 (probably earlier 10.9 versions as well)
- 
        
- 
        530607d8ba0dac8d91d20ec0e62d3129cb21e225
Warnings like the one below appear, usually when opening a ComboBox from a modal dialog. Other use-cases may trigger it.
2014-03-19 15:49:14.886 menus[92616:507] modalSession has been exited prematurely - check for a reentrant call to endModalSession:
To reproduce, run the widgets/dialogs/standarddialogs example, select the "Input Dialogs" panel, and then click the "QInputDialog::getItem()" button. After the dialog appears, open the combo box and select a different item. The warning appears while the combo box popup is closing.