Cocoa: Fix modal session cleanup.

Call [NSApp endModalSession] at the correct time.

Calling cleanupModalSessions() from processPostedEvents()
resulted in endModalSession being called from within
[NSApp runModalSession] - ending and cleaning up the
the modal session while Cocoa is still using it.

Move the cleanupModalSessions() call to to after
runModalSession returns.

Task-number: QTBUG-37699
Change-Id: I5868def36f6869667b0bbe33733286e3e49488eb
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@digia.com>